added participants to chat
