# src/main/java/io/github/onecx/chat/domain/models/Participant.java
@@ -13,32 +13,31 @@ import lombok.Setter;
 @Getter
 @Setter
 @Entity
-@Table(name = "MESSAGE")
-public class Message extends TraceableEntity {
+@Table(name = "PARTICIPANT")
+public class Participant extends TraceableEntity {
 
     @TenantId
     @Column(name = "TENANT_ID")
     private String tenantId;
 
-    @Column(name = "TEXT")
-    private String text;
+    @Column(name = "USER_ID")
+    private String userId;
+
+    @Column(name = "EMAIL")
+    private String email;
 
     @Column(name = "TYPE")
     @Enumerated(EnumType.STRING)
-    private MessageType type;
+    private ParticipantType type;
 
     @Column(name = "USER_NAME")
     private String userName;
-
-    @Column(name = "RELIABILITY")
-    private Float reliability;
 
     @ManyToOne(fetch = LAZY)
     @JoinColumn(name = "CHAT_ID")
     private Chat chat;
 
-    public enum MessageType {
-        SYSTEM,
+    public enum ParticipantType {
         HUMAN,
         ASSISTANT,
     }
